# lattice-qcd-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  bacon.toml  crates.js  help.html  makefile  rust-toolchain.toml  rustfmt.toml  search-index.js  settings.html  source-files.js  utility.mk
.github/: dependabot.yml
.github/workflows/: benches.yml  clippy.yml  coverage.yml  fmt.yml  rust.yml  rust_beta.yml  rust_doc.yml  rust_doc_check.yml  rust_doc_publish.yml  rust_experimental.yml  rust_test.yml
average_of_plaquette/: Cargo.toml
average_of_plaquette/src/: config.rs  config_scan.rs  corr_b.rs  cross_check_3d_analysis.rs  cross_check_d3.rs  cross_check_d3_analysis.rs  cross_check_d4.rs  cross_check_e.rs  data_analysis.rs  lib.rs  main.rs  observable.rs  plot_console.rs  plot_corr_e.rs  rng.rs  sim.rs  test.rs
benches/: bench.rs
implementors/lattice_qcd_rs/: trait.Distribution.js
lattice_qcd_rs/: all.html  index.html  macro.assert_eq_complex!.html  macro.assert_eq_complex.html  macro.assert_eq_matrix!.html  macro.assert_eq_matrix.html  macro.assert_matrix_is_su_2!.html  macro.assert_matrix_is_su_2.html  macro.assert_matrix_is_su_3!.html  macro.assert_matrix_is_su_3.html  macro.assert_matrix_is_unitary_2!.html  macro.assert_matrix_is_unitary_2.html  macro.assert_matrix_is_unitary_3!.html  macro.assert_matrix_is_unitary_3.html  sidebar-items.js  trait.ComplexField.html  trait.Distribution.html  trait.Rng.html  trait.SeedableRng.html  type.CMatrix2.html  type.CMatrix3.html  type.Complex.html  type.Real.html  type.Vector8.html
lattice_qcd_rs/dim/: constant.U0.html  constant.U1.html  constant.U10.html  constant.U100.html  constant.U101.html  constant.U102.html  constant.U103.html  constant.U104.html  constant.U105.html  constant.U106.html  constant.U107.html  constant.U108.html  constant.U109.html  constant.U11.html  constant.U110.html  constant.U111.html  constant.U112.html  constant.U113.html  constant.U114.html  constant.U115.html  constant.U116.html  constant.U117.html  constant.U118.html  constant.U119.html  constant.U12.html  constant.U120.html  constant.U121.html  constant.U122.html  constant.U123.html  constant.U124.html  constant.U125.html  constant.U126.html  constant.U127.html  constant.U13.html  constant.U14.html  constant.U15.html  constant.U16.html  constant.U17.html  constant.U18.html  constant.U19.html  (+219 more)
lattice_qcd_rs/error/: enum.ImplementationError.html  enum.LatticeInitializationError.html  enum.MultiIntegrationError.html  enum.Never.html  enum.StateInitializationError.html  enum.StateInitializationErrorThreaded.html  enum.ThreadedStateInitializationError.html  index.html  sidebar-items.js  struct.ErrorWithOnwnedValue.html  struct.ErrorWithOwnedValue.html
lattice_qcd_rs/field/: index.html  sidebar-items.js  struct.EField.html  struct.LinkMatrix.html  struct.Su3Adjoint.html
lattice_qcd_rs/integrator/: index.html  sidebar-items.js  trait.SymplecticIntegrator.html
lattice_qcd_rs/lattice/: enum.DirectionConversionError.html  enum.DirectionEnum.html  enum.ErrorDirectionConversion.html  enum.IteratorElement.html  index.html  sidebar-items.js  struct.Direction.html  struct.IteratorDirection.html  struct.IteratorLatticeLinkCanonical.html  struct.IteratorLatticePoint.html  struct.LatticeCyclic.html  struct.LatticeCyclique.html  struct.LatticeLink.html  struct.LatticeLinkCanonical.html  struct.LatticePoint.html  trait.DirectionList.html  trait.LatticeElementToIndex.html
lattice_qcd_rs/number/: index.html  sidebar-items.js  struct.FixedPointNumber.html  type.I32U128.html
lattice_qcd_rs/prelude/: index.html  sidebar-items.js  trait.ComplexField.html  type.U3.html  type.U4.html
lattice_qcd_rs/simulation/: index.html  sidebar-items.js
lattice_qcd_rs/statistics/: fn.covariance.html  fn.covariance_par_iter.html  fn.covariance_par_iter_val.html  fn.mean.html  fn.mean_and_variance.html  fn.mean_and_variance_par_iter.html  fn.mean_and_variance_par_iter_val.html  fn.mean_par_iter.html  fn.mean_par_iter_val.html  fn.mean_with_error.html  fn.mean_with_error_par_iter.html  fn.mean_with_error_par_iter_val.html  fn.variance.html  fn.variance_par_iter.html  fn.variance_par_iter_val.html  index.html  sidebar-items.js
lattice_qcd_rs/su2/: constant.PAULI_1.html  constant.PAULI_2.html  constant.PAULI_3.html  constant.PAULI_MATRICES.html  fn.complex_matrix_from_vec.html  fn.get_complex_matrix_from_vec.html  fn.get_random_su2.html  fn.get_random_su2_close_to_unity.html  fn.is_matrix_su2.html  fn.project_to_su2.html  fn.project_to_su2_unorm.html  fn.random_su2.html  fn.random_su2_close_to_unity.html  index.html  sidebar-items.js
lattice_qcd_rs/su3/: constant.GENERATORS.html  constant.GENERATOR_1.html  constant.GENERATOR_2.html  constant.GENERATOR_3.html  constant.GENERATOR_4.html  constant.GENERATOR_5.html  constant.GENERATOR_6.html  constant.GENERATOR_7.html  constant.GENERATOR_8.html  fn.create_matrix_from_2_vector.html  fn.extract_su2_unorm.html  fn.factorial_size_for_exp.html  fn.get_factorial_size_for_exp.html  fn.get_r.html  fn.get_random_su3.html  fn.get_random_su3_close_to_unity.html  fn.get_s.html  fn.get_su2_r_unorm.html  fn.get_su2_s_unorm.html  fn.get_su2_t_unorm.html  fn.get_sub_block_r.html  fn.get_sub_block_s.html  fn.get_sub_block_t.html  fn.get_t.html  fn.is_matrix_su3.html  fn.is_matrix_su3_lie.html  fn.matrix_su3_exp_i.html  fn.matrix_su3_exp_r.html  fn.orthonormalize_matrix.html  fn.orthonormalize_matrix_mut.html  fn.random_su3.html  fn.random_su3_close_to_unity.html  index.html  (+5 more)
lattice_qcd_rs_procedural_macro/: all.html  index.html  macro.implement_direction_from!.html  macro.implement_direction_from.html  macro.implement_direction_list!.html  macro.implement_direction_list.html  sidebar-items.js
procedural_macro/: CHANGELOG.md  Cargo.toml  README.md
procedural_macro/src/: lib.rs
simulation-bin/: Cargo.toml
simulation-bin/src/: main.rs
src/: builder.rs  dim.rs  error.rs  field.rs  integrator.rs  lattice.rs  lib.rs  macro_def.rs  main.rs  number.rs  prelude.rs  simulation.rs  statistics.rs  su2.rs  su3.rs  test.rs  thread.rs  utils.rs
(+223 files in other folders)
