[package]
name = "lattice-qcd-rs"
version = "0.2.1"
authors = ["Aliénore Bouttefeux <alienore.bouttefeux@gmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/ABouttefeux/lattice-qcd-rs"
categories = ["Science", "Simulation"]
description = "Lattice QCD simulation"
keywords = ["QCD", "Lattice", "Monte-Carlo", "chromodynamics"]
publish = true
license = "MIT OR Apache-2.0"
rust-version = "1.61"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[features]
serde-serialize = ["serde", "nalgebra/serde-serialize"]
no-overflow-test= []
default = ["serde-serialize"]

[workspace]
members = ["procedural_macro"]

[dependencies]
nalgebra = { version = "0.32.2", features = ["serde-serialize"] }
approx = "0.5.1"
num-traits = "0.2.15"
rand = "0.8.5"
rand_distr = "0.4.3"
crossbeam = "0.8.1"
rayon = "1.5.3"
serde = { version = "1.0", features = ["derive"], optional = true }
lattice_qcd_rs-procedural_macro = {path = "procedural_macro", version = "0.2.1"}

[dev-dependencies]
criterion = "0.5.0"
version-sync = "0.9.4"

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false

[profile.test]
opt-level = 2 # in order to have resonable test time


[profile.release]
codegen-units = 1
lto = true
