[package]
name = "average_of_plaquette"
version = "0.1.0"
authors = ["Aliénore Bouttefeux <alienore.bouttefeux@gmail.com>"]
edition = "2018"
publish = false


[dependencies]
nalgebra = "0.24.0"
rand = "0.8.2"
rand_distr = "0.4.0"
lattice-qcd-rs = { path = "..", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
csv = "1.1"
indicatif = { version = "0.15.0", features = ["rayon"] }
plotters = "0.3"
rayon = "1.5.0"
serde_json = "*"
rand_xoshiro = "0.6"
