[package]
name = "average_of_plaquette"
version = "0.1.0"
authors = ["Aliénore Bouttefeux <alienore.bouttefeux@gmail.com>"]
edition = "2018"
publish = false


[dependencies]
nalgebra = "0.24.0"
rand = "0.8.2"
rand_distr = "0.4.0"
lattice-qcd-rs = { path = "..", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
csv = "1.1"
indicatif = { version = "0.15.0", features = ["rayon"] }
plotters = "0.3"
rayon = "1.5.0"
serde_json = "*"
rand_xoshiro = { version = "0.6", features = ["serde1"] }
crossbeam = "0.8.0"
rustfft = "5.0"
console = "0.14"
plotter_backend_text = { version = "0.0.0", git = "https://github.com/ABouttefeux/plotter_backend_text", branch = "develop" }
once_cell = "1.5.2"

[[bin]]
name = "cross_check_d4"
path = "src/cross_check_d4.rs"

[[bin]]
name = "cross_check_d3"
path = "src/cross_check_d3.rs"

[[bin]]
name = "cross_check_e"
path = "src/cross_check_e.rs"

[[bin]]
name = "corr_b"
path = "src/corr_b.rs"

[[bin]]
name = "cross_check_d3_analysis"
path = "src/cross_check_d3_analysis.rs"
