[package]
name = "lattice_qcd_rs-procedural_macro"
version = "0.3.0"
authors = ["Aliénore Bouttefeux <alienore.bouttefeux@gmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/ABouttefeux/lattice-qcd-rs/"
categories = ["Science", "Simulation"]
description = "Set of procedural macro for the main library lattice_qcd_rs"
keywords = ["QCD", "Lattice", "Monte-Carlo", "chromodynamics", "macro"]
publish = true
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"

[dev-dependencies]
version-sync = "0.9.5"
